--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -24,9 +25,16 @@
         
         <section class="wrapper">
             <div id="content">
-                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
+                <p>Hello, my name is Razvan! Like many others who go into web development, it was not what I originally studied in university. My career change decision came after much introspection about what would make me happy as well as keep me challenged. I can't wait to be a creative partner with you!</p>
             </div>
-        </section>    
+        </section> 
+        <section class="contact"> 
+            <div id="contact">
+                <p>You can contact me at : 07435321075</p>
+            </div>
+        </section>
+
+          
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
